application/static/css/style.css
/* ... */
@media screen and (min-width: 360px) {
  #app-navigation {
    justify-content: space-between;
    gap: initial;
  }
}

#app-navigation.opaque {
  background-color: var(--quinary-color);
}

.app-title {
  font-family: sarabun-bold;
  font-size: 1.3rem;
  letter-spacing: 2px;
  text-decoration: none;
  color: var(--tertiary-color);
  -webkit-transition: all 200ms linear;
  -ms-transition: all 200ms linear;
  transition: all 200ms linear;
}

.app-title.desktop {
  display: none;
}

#app-navigation ul {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 3px;
  width: 85%;
  color: var(--tertiary-color);
  list-style: none;
}

@media screen and (min-width: 440px) {
  #app-navigation ul {
    justify-content: space-around;
    gap: initial;
    width: 100%;
  }
}

@media screen and (min-width: 720px) {
  .app-title.mobile {
    display: none;
  }

  .app-title.desktop {
    display: inline-flex;
    font-size: 1.5rem;
  }

  #app-navigation ul {
    justify-content: space-between;
    gap: 30px;
    width: auto;
  }
}

#app-navigation .link-item {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 5px;
  padding: 5px 12px;
  border-radius: 4px;
  text-decoration: none;
  letter-spacing: 1px;
  color: var(--tertiary-color);
  cursor: pointer;
  -webkit-transition: all 200ms linear;
  -ms-transition: all 200ms linear;
  transition: all 200ms linear;
}

#app-navigation .link-item:hover,
#app-navigation .link-item:active,
#app-navigation .link-item.selected {
  color: var(--quinary-color);
  background-color: var(--quaternary-color);
}

#app-navigation .link-item:hover svg,
#app-navigation .link-item:active svg,
#app-navigation .link-item.selected svg {
  fill: #18181c;
}

#app-navigation svg {
  fill: var(--tertiary-color);
  -webkit-transition: all 200ms linear;
  -ms-transition: all 200ms linear;
  transition: all 200ms linear;
}

#app-navigation span {
  display: none;
}

@media screen and (min-width: 1200px) {
  
  #app-navigation span {
    display: inline-flex;
  }
}

#app-navigation a {
  text-decoration: none;
  color: inherit;
}

/* ------------------- CONTENT ------------------- */

.content {
  box-sizing: border-box;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  box-sizing: border-box;
  margin: 0;
  padding: 5px 0;
  width: 90%;
  min-height: 80vh;
  color: var(--quinary-color);
}

.header {
  letter-spacing: 1px;
}

.content button {
  color: var(--quinary-color);
  padding: 7px 12px;
  border-radius: 4px;
  background-color: var(--secondary-color);
  border: none;
  cursor: pointer;
  -webkit-transition: all 200ms linear;
  -ms-transition: all 200ms linear;
  transition: all 200ms linear;
}

.content button.delete {
  background-color: transparent;
  border: var(--quaternary-color) 1px solid;
  border-radius: 0;
  color: var(--tertiary-color);
}

.content button.delete:hover {
  background-color: var(--quaternary-color);
  color: var(--quinary-color);
}

.content button:active {
  filter: brightness(0.9);
}

.content button:hover {
  filter: contrast(1.5);
}

.content a {
  text-decoration: none;
  color: var(--secondary-color);
}

.content a:hover {
  filter: contrast(1.5);
}

.content hr {
  width: 100%;
  border: none;
  border-top: solid var(--tertiary-color) 2px;
}

.flashed-messages {
  padding: 0;
  margin: 16px 0;
  color: var(--quaternary-color);
  list-style: none;
}

/* ------------------- LOG IN PAGE ------------------- */

.page {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 15px;
  box-sizing: border-box;
  margin: 0;
  padding: 25px;
  height: auto;
  width: clamp(200px, 100%, 50ch);
  text-align: left;
  color: var(--tertiary-color);
  background-color: var(--secondary-background-color);
  border: var(--primary-border);
  border-radius: 4px;
  box-shadow: var(--primary-shadow);
}

.page .header {
  font-family: sarabun-bold;
  font-size: 2rem;
  letter-spacing: 2px;
  margin: 0;
  width: 100%;
  text-align: left;
}

.page .sub-header {
  margin: 0;
  text-align: left;
  width: 100%;
}

.page form {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  width: 100%;
  gap: 15px;
  margin: 0;
  padding: 0;
  text-align: left;
}

.page form .button-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}

.page form .row {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-start;
  gap: 5px;
  width: 100%;
}

@media screen and (min-width: 720px) {
  .page form .row {
    flex-direction: row;
    align-items: center;
    gap: initial;
  }
}

.page input,
.page textarea {
  background-color: var(--tertiary-color);
  border: transparent 1px solid;
  -webkit-transition: all 200ms linear;
  -ms-transition: all 200ms linear;
  transition: all 200ms linear;
}

.page input:focus,
.page textarea:focus {
  outline: transparent;
  border: var(--secondary-color) 1px solid;
}

.page input {
  width: 25ch;
}

.page textarea {
  height: 20ch;
  width: 100%;
}

/* ------------------- CREATE AND EDIT BLOG POST ------------------- */
#create-blog-post-page, #update-blog-post-page {
  width: clamp(200px, 100%, 800px);
}

#create-blog-post-page input,
#create-blog-post-page textarea,
#update-blog-post-page input,
#update-blog-post-page textarea {
  width: 100%;
}


#create-blog-post-page textarea,
#update-blog-post-page textarea {
  height: 40ch;
  width: 100%;
}


/* ------------------- BLOGGERS ------------------- */

.users {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  flex-wrap: nowrap;
  gap: 10px;
  height: 100%;
  width: 100%;
  padding: 0;
  margin: 0;
  list-style: none;
}
/* ... */

